dia1 menu header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Vite + React</title>
 </head>
 
-<body class="font-Roboto">
+<body class="px-4 font-Roboto">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
